added new test case