@@ -1,8 +1,10 @@
 package apiEngine;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.restassured.response.Response;
-public class RestResponse<T> implements IRestResponse<T> {
 
+public class RestResponse<T>  implements IRestResponse<T> {
+ObjectMapper objectMapper = new ObjectMapper();
     private T data;
     private Response response;
     private Exception e;
@@ -10,9 +12,11 @@ public class RestResponse<T> implements IRestResponse<T> {
     public RestResponse(Class<T> t, Response response) {
         this.response = response;
         try{
-            this.data = t.newInstance();
+            this.data = t.getDeclaredConstructor().newInstance();
         }catch (Exception e){
+            e.printStackTrace();
             throw new RuntimeException("There should be a default constructor in the Response POJO");
+
         }
     }
 
@@ -41,13 +45,18 @@ public class RestResponse<T> implements IRestResponse<T> {
 
     public T getBody()  {
         try {
-            data = (T) response.getBody().as(data.getClass());
+            data = (T) response.body().as(data.getClass());
+
         }catch (Exception e) {
             this.e=e;
+            System.out.println(e.getMessage());
+            e.printStackTrace();
         }
-        finally{
-            data = (T) response.getBody().as(data.getClass());
+        finally {
+            data = (T) response.body().as(data.getClass());
         }
+
+
         return data;
     }
 
